# federated-learning-project

./: .gitignore  README.md  federated-learning-project.ipynb  pyproject.toml  requirements.txt
results/attack/: client_0_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_1_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_2_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_3_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_4_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_5_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_6_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_7_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_8_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_9_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  global_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv
results/no_attack/: client_0_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_1_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_2_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_3_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_4_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_5_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_6_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_7_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_8_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  client_9_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv  global_metrics(num_rounds=15, local_epochs=5, batch_size=32).csv
src/: client.py  main.py  model.py  server.py  visualize_results.py
