[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-learning-project"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr==1.11.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "group3"

[tool.flwr.app.components]
serverapp = "federated_learning_project.server_app:app"
clientapp = "federated_learning_project.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
